--- a/search-by-letter.html
+++ b/search-by-letter.html
@@ -2,8 +2,9 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Search by First Letter</title>
+  <title>Search by Letter</title>
   <style>
+    /* نفس الستايل الموجود عندك */
     body {
       font-family: 'Segoe UI', sans-serif;
       background-color: #fdf6e3;
@@ -35,7 +36,7 @@
       margin-bottom: 30px;
     }
 
-    input[type="text"] {
+    select {
       width: 100%;
       padding: 12px;
       font-size: 16px;
@@ -61,14 +62,6 @@
       background-color: #cf711d;
     }
 
-    .result {
-      margin-top: 25px;
-      padding: 15px;
-      background-color: #fff1db;
-      border-radius: 10px;
-      border: 1px solid #e0c097;
-    }
-
     .back-link {
       display: block;
       margin-top: 30px;
@@ -81,30 +74,187 @@
     .back-link:hover {
       text-decoration: underline;
     }
+
+    .meals-list {
+      display: grid;
+      grid-template-columns: 1fr 1fr 1fr;
+      gap: 20px;
+      margin-top: 20px;
+    }
+
+    .meal-item {
+      background-color: #fff;
+      padding: 10px;
+      border-radius: 8px;
+      box-shadow: 0 2px 10px rgba(0,0,0,0.1);
+      text-align: center;
+    }
+
+    .meal-item img {
+      width: 100%;
+      border-radius: 8px;
+    }
+
+    .meal-item h3 {
+      color: #c0392b;
+    }
+
+    .error-message {
+      color: red;
+      text-align: center;
+      font-size: 18px;
+      margin-top: 20px;
+    }
+
+    .recipe-details {
+      margin-top: 30px;
+      background-color: #f5f5f5;
+      padding: 20px;
+      border-radius: 8px;
+      box-shadow: 0 2px 10px rgba(0,0,0,0.1);
+    }
+
   </style>
 </head>
 <body>
 
-  <header>
-    <h1>🔤 Search Meal by First Letter</h1>
-  </header>
+<header>
+  <h1>🔤 Search by Letter</h1>
+</header>
 
-  <div class="container">
-    <h2>Enter a letter (A-Z)</h2>
-    <form class="search-form">
-      <input type="text" maxlength="1" placeholder="e.g. B">
-      <button type="submit">Search</button>
-    </form>
+<div class="container">
+  <h2>Choose a letter</h2>
+  <form class="letter-form" id="letter-form">
+    <select id="letter">
+      <option value="A">A</option>
+      <option value="B">B</option>
+      <option value="C">C</option>
+      <option value="D">D</option>
+      <option value="E">E</option>
+      <option value="F">F</option>
+      <option value="G">G</option>
+      <option value="H">H</option>
+      <option value="I">I</option>
+      <option value="J">J</option>
+      <option value="K">K</option>
+      <option value="L">L</option>
+      <option value="M">M</option>
+      <option value="N">N</option>
+      <option value="O">O</option>
+      <option value="P">P</option>
+      <option value="Q">Q</option>
+      <option value="R">R</option>
+      <option value="S">S</option>
+      <option value="T">T</option>
+      <option value="U">U</option>
+      <option value="V">V</option>
+      <option value="W">W</option>
+      <option value="X">X</option>
+      <option value="Y">Y</option>
+      <option value="Z">Z</option>
+    </select>
 
-    <div class="result">
-      <h3>🍔 Burger Deluxe</h3>
-      <p><strong>Category:</strong> American</p>
-      <p><strong>Area:</strong> USA</p>
-      <p><strong>Instructions:</strong> Grill the patty, assemble with bun, lettuce, tomato, and condiments.</p>
-    </div>
+    <button type="submit">Search</button>
+  </form>
 
-    <a href="index.html" class="back-link">🏠 Back to Home</a>
-  </div>
+  <!-- Move recipe details above the meals list -->
+  <div id="recipe-details" class="recipe-details"></div>
+
+  <div id="meals-list" class="meals-list"></div>
+  <div id="error-message" class="error-message"></div>
+
+  <a href="meals.html" class="back-link">🏠 Back to Home</a>
+</div>
+
+<script>
+  document.getElementById('letter-form').addEventListener('submit', function(event) {
+    event.preventDefault();
+
+    // Get selected letter
+    const letter = document.getElementById('letter').value;
+    const mealsList = document.getElementById('meals-list');
+    const errorMessage = document.getElementById('error-message');
+    const recipeDetails = document.getElementById('recipe-details');
+
+    // Clear previous results and errors
+    mealsList.innerHTML = '';
+    errorMessage.innerHTML = '';
+    recipeDetails.innerHTML = ''; // Clear recipe details
+
+    // Fetch meals from TheMealDB API based on first letter
+    fetch(`https://www.themealdb.com/api/json/v1/1/search.php?f=${letter}`)
+            .then(response => response.json())
+            .then(data => {
+              const meals = data.meals;
+
+              if (!meals) {
+                errorMessage.innerHTML = 'No meals found for this letter. Please try another one.';
+              } else {
+                // Display meals
+                meals.forEach(meal => {
+                  const mealItem = document.createElement('div');
+                  mealItem.classList.add('meal-item');
+                  mealItem.innerHTML = `
+              <img src="${meal.strMealThumb}" alt="${meal.strMeal}">
+              <h3>${meal.strMeal}</h3>
+              <button class="view-recipe" data-meal-id="${meal.idMeal}">View Recipe</button>
+            `;
+                  mealsList.appendChild(mealItem);
+                });
+
+                // Add event listener to each "View Recipe" button
+                document.querySelectorAll('.view-recipe').forEach(button => {
+                  button.addEventListener('click', function() {
+                    const mealId = this.getAttribute('data-meal-id');
+                    fetchRecipeDetails(mealId);
+                  });
+                });
+              }
+            })
+            .catch(error => {
+              errorMessage.innerHTML = 'Error fetching meals. Please try again later.';
+              console.error('Error fetching meals:', error);
+            });
+  });
+
+  // Fetch and display recipe details
+  function fetchRecipeDetails(mealId) {
+    const recipeDetails = document.getElementById('recipe-details');
+    recipeDetails.innerHTML = ''; // Clear previous recipe details
+
+    fetch(`https://www.themealdb.com/api/json/v1/1/lookup.php?i=${mealId}`)
+            .then(response => response.json())
+            .then(data => {
+              const meal = data.meals[0];
+              recipeDetails.innerHTML = `
+          <h2>${meal.strMeal}</h2>
+          <img src="${meal.strMealThumb}" alt="${meal.strMeal}">
+          <p><strong>Category:</strong> ${meal.strCategory}</p>
+          <p><strong>Area:</strong> ${meal.strArea}</p>
+          <p><strong>Instructions:</strong> ${meal.strInstructions}</p>
+          <h3>Ingredients:</h3>
+          <ul>
+            ${getIngredientsList(meal)}
+          </ul>
+        `;
+            })
+            .catch(error => {
+              recipeDetails.innerHTML = 'Error fetching recipe details.';
+              console.error('Error fetching recipe details:', error);
+            });
+  }
+
+  // Get the ingredients list for a meal
+  function getIngredientsList(meal) {
+    const ingredients = [];
+    for (let i = 1; i <= 20; i++) {
+      if (meal[`strIngredient${i}`] && meal[`strIngredient${i}`] !== "") {
+        ingredients.push(`<li>${meal[`strIngredient${i}`]} - ${meal[`strMeasure${i}`]}</li>`);
+      }
+    }
+    return ingredients.join('');
+  }
+</script>
 
 </body>
 </html>
