--- a/all-categories.html
+++ b/all-categories.html
@@ -21,7 +21,7 @@
     }
 
     .container {
-      max-width: 700px;
+      max-width: 900px;
       margin: 40px auto;
       padding: 30px;
       background-color: #fff5e1;
@@ -32,12 +32,13 @@
     h2 {
       text-align: center;
       color: #6e3b1e;
-      margin-bottom: 30px;
+      margin-bottom: 20px;
     }
 
     .category-list {
       list-style-type: none;
       padding: 0;
+      margin: 0;
     }
 
     .category-item {
@@ -47,6 +48,57 @@
       padding: 12px;
       border-radius: 8px;
       text-align: center;
+      cursor: pointer;
+    }
+
+    .category-item:hover {
+      background-color: #d35400;
+    }
+
+    .meal-details {
+      margin: 40px 0 30px;
+      padding: 20px;
+      background-color: #fff;
+      border-radius: 16px;
+      box-shadow: 0 0 15px rgba(0,0,0,0.1);
+    }
+
+    .meal-details img {
+      max-width: 100%;
+      border-radius: 12px;
+    }
+
+    .meals-list {
+      display: grid;
+      grid-template-columns: repeat(auto-fit, minmax(220px, 1fr));
+      gap: 20px;
+    }
+
+    .meal-item {
+      background-color: #fff;
+      padding: 10px;
+      border-radius: 8px;
+      box-shadow: 0 2px 10px rgba(0,0,0,0.1);
+      text-align: center;
+    }
+
+    .meal-item img {
+      width: 100%;
+      border-radius: 8px;
+    }
+
+    .meal-item button {
+      margin-top: 10px;
+      background-color: #c0392b;
+      color: white;
+      border: none;
+      padding: 8px 12px;
+      border-radius: 6px;
+      cursor: pointer;
+    }
+
+    .meal-item button:hover {
+      background-color: #a93226;
     }
 
     .back-link {
@@ -65,23 +117,101 @@
 </head>
 <body>
 
-  <header>
-    <h1>📂 All Meal Categories</h1>
-  </header>
+<header>
+  <h1>📂 All Meal Categories</h1>
+</header>
 
-  <div class="container">
-    <h2>Browse all available meal categories</h2>
+<div class="container">
+  <h2>Meal Categories</h2>
+  <ul id="category-list" class="category-list"></ul>
 
-    <ul class="category-list">
-      <li class="category-item">Italian</li>
-      <li class="category-item">Indian</li>
-      <li class="category-item">Chinese</li>
-      <li class="category-item">Mexican</li>
-      <li class="category-item">American</li>
-    </ul>
+  <div id="meal-details" class="meal-details"></div> <!-- 👈 الوصفة هون -->
 
-    <a href="index.html" class="back-link">🏠 Back to Home</a>
-  </div>
+  <div id="meals-list" class="meals-list"></div>
+
+  <a href="meals.html" class="back-link">🏠 Back to Home</a>
+</div>
+
+<script>
+  const categoryList = document.getElementById('category-list');
+  const mealsList = document.getElementById('meals-list');
+  const mealDetails = document.getElementById('meal-details');
+
+  // Get all categories
+  fetch('https://www.themealdb.com/api/json/v1/1/list.php?c=list')
+          .then(res => res.json())
+          .then(data => {
+            data.meals.forEach(category => {
+              const li = document.createElement('li');
+              li.classList.add('category-item');
+              li.textContent = category.strCategory;
+              li.addEventListener('click', () => {
+                fetchMealsByCategory(category.strCategory);
+              });
+              categoryList.appendChild(li);
+            });
+          });
+
+  // Get meals by category
+  function fetchMealsByCategory(category) {
+    mealsList.innerHTML = '';
+    mealDetails.innerHTML = ''; // Clear any previous recipe
+    fetch(`https://www.themealdb.com/api/json/v1/1/filter.php?c=${category}`)
+            .then(res => res.json())
+            .then(data => {
+              data.meals.forEach(meal => {
+                const mealDiv = document.createElement('div');
+                mealDiv.classList.add('meal-item');
+                mealDiv.innerHTML = `
+            <img src="${meal.strMealThumb}" alt="${meal.strMeal}">
+            <h3>${meal.strMeal}</h3>
+            <button data-id="${meal.idMeal}">View Recipe</button>
+          `;
+                mealsList.appendChild(mealDiv);
+              });
+
+              document.querySelectorAll('.meal-item button').forEach(btn => {
+                btn.addEventListener('click', () => {
+                  const mealId = btn.getAttribute('data-id');
+                  fetchRecipe(mealId);
+                });
+              });
+            });
+  }
+
+  // Get recipe by ID
+  function fetchRecipe(id) {
+    mealDetails.innerHTML = '';
+    fetch(`https://www.themealdb.com/api/json/v1/1/lookup.php?i=${id}`)
+            .then(res => res.json())
+            .then(data => {
+              const meal = data.meals[0];
+              const ingredients = getIngredientsList(meal);
+              mealDetails.innerHTML = `
+          <h2>${meal.strMeal}</h2>
+          <img src="${meal.strMealThumb}" alt="${meal.strMeal}">
+          <p><strong>Category:</strong> ${meal.strCategory}</p>
+          <p><strong>Area:</strong> ${meal.strArea}</p>
+          <p><strong>Instructions:</strong> ${meal.strInstructions}</p>
+          <h3>Ingredients:</h3>
+          <ul>${ingredients}</ul>
+        `;
+              mealDetails.scrollIntoView({ behavior: 'smooth' });
+            });
+  }
+
+  function getIngredientsList(meal) {
+    const ingredients = [];
+    for (let i = 1; i <= 20; i++) {
+      const ingredient = meal[`strIngredient${i}`];
+      const measure = meal[`strMeasure${i}`];
+      if (ingredient && ingredient.trim()) {
+        ingredients.push(`<li>${ingredient} - ${measure}</li>`);
+      }
+    }
+    return ingredients.join('');
+  }
+</script>
 
 </body>
 </html>
