--- a/search-by-name.html
+++ b/search-by-name.html
@@ -4,7 +4,6 @@
   <meta charset="UTF-8">
   <title>Search by Name</title>
   <style>
-    /* نفس الستايل الموجود عندك */
     body {
       font-family: 'Segoe UI', sans-serif;
       background-color: #fdf6e3;
@@ -114,33 +113,33 @@
       border-radius: 8px;
       box-shadow: 0 2px 10px rgba(0,0,0,0.1);
       display: none;
-      width: 80%; /* جعل العرض 80% من العرض الكامل للصفحة */
-      max-width: 10000000px; /* الحد الأقصى للعرض ليكون أكبر */
-      margin-left: auto; /* توسيط العرض */
-      margin-right: auto; /* توسيط العرض */
-      overflow-y: auto; /* منع التمرير الرأسي إذا كانت الوصفة طويلة */
-      max-height: 300px; /* تحديد حد أقصى للطول */
+      width: 80%;
+      max-width: 10000000px;
+      margin-left: auto;
+      margin-right: auto;
+      overflow-y: auto;
+      max-height: 300px;
     }
 
     .recipe-view img {
-      width: 100%; /* التأكد من أن الصورة تملأ العرض بالكامل */
+      width: 100%;
       border-radius: 8px;
     }
 
     .recipe-view h3 {
       color: #c0392b;
-      font-size: 24px; /* حجم الخط يمكن تكبيره حسب الحاجة */
+      font-size: 24px;
     }
 
     .recipe-view p {
-      font-size: 18px; /* تكبير الخط قليلاً */
+      font-size: 18px;
       line-height: 1.6;
     }
 
     .recipe-view ul {
       list-style: none;
       padding: 0;
-      font-size: 16px; /* حجم الخط للمكونات */
+      font-size: 16px;
     }
 
     .recipe-view li {
@@ -148,10 +147,10 @@
     }
 
     @media (max-width: 768px) {
-      /* تحسين المظهر للأجهزة الصغيرة */
+
       .recipe-view {
-        width: 90%; /* جعل العرض يتناسب مع الأجهزة الصغيرة */
-        max-width: 100%; /* الحد الأقصى للعرض على الأجهزة الصغيرة */
+        width: 90%;
+        max-width: 100%;
       }
     }
 
