--- a/meals.html
+++ b/meals.html
@@ -77,7 +77,7 @@
       <li><a href="meals-by-category.html">🍛 By Category</a></li>
       <li><a href="meals-by-area.html">🌍 By Area</a></li>
       <li><a href="meals-by-ingredient.html">🥕 By Ingredient</a></li>
-     
+      <li><a href="ShowMyRecipes.html"> 📋 Show My Recipes</a></li>
     </ul>
   </div>
 
