--- a/meals.html
+++ b/meals.html
@@ -78,6 +78,8 @@
       <li><a href="meals-by-area.html">🌍 By Area</a></li>
       <li><a href="meals-by-ingredient.html">🥕 By Ingredient</a></li>
       <li><a href="ShowMyRecipes.html"> 📋 Show My Recipes</a></li>
+      <li> <a href="favorites.html">❤️ Favorites</a></li>
+
     </ul>
   </div>
 
