--- a/random-meal.html
+++ b/random-meal.html
@@ -4,7 +4,6 @@
   <meta charset="UTF-8">
   <title>Random Meal</title>
   <style>
-
     body {
       font-family: 'Segoe UI', sans-serif;
       background-color: #fdf6e3;
@@ -46,6 +45,7 @@
       font-size: 18px;
       cursor: pointer;
       transition: background-color 0.3s;
+      margin-top: 15px;
     }
 
     button:hover {
@@ -96,7 +96,6 @@
       border-radius: 8px;
       box-shadow: 0 2px 10px rgba(0,0,0,0.1);
     }
-
   </style>
 </head>
 <body>
@@ -109,30 +108,28 @@
   <h2>Get a Random Meal</h2>
   <button id="get-random-meal">Get Random Meal</button>
 
-  <!-- Move recipe details above the meal list -->
   <div id="recipe-details" class="recipe-details"></div>
-
   <div id="error-message" class="error-message"></div>
 
   <a href="meals.html" class="back-link">🏠 Back to Home</a>
 </div>
 
 <script>
-  document.getElementById('get-random-meal').addEventListener('click', function() {
+  document.getElementById('get-random-meal').addEventListener('click', function () {
     const recipeDetails = document.getElementById('recipe-details');
     const errorMessage = document.getElementById('error-message');
 
-    // Clear previous results and errors
+    // Clear previous content
     recipeDetails.innerHTML = '';
     errorMessage.innerHTML = '';
 
-    // Fetch a random meal from TheMealDB API
+    // Fetch a random meal
     fetch('https://www.themealdb.com/api/json/v1/1/random.php')
             .then(response => response.json())
             .then(data => {
               const meal = data.meals[0];
 
-              // Display the random meal details
+              // Display the meal
               recipeDetails.innerHTML = `
           <h2>${meal.strMeal}</h2>
           <img src="${meal.strMealThumb}" alt="${meal.strMeal}">
@@ -143,7 +140,13 @@
           <ul>
             ${getIngredientsList(meal)}
           </ul>
+          <button id="add-to-favorites" data-meal-id="${meal.idMeal}">❤️ Add to Favorites</button>
         `;
+
+              // Add to favorites functionality
+              document.getElementById('add-to-favorites').addEventListener('click', function () {
+                addToFavorites(meal.idMeal);
+              });
             })
             .catch(error => {
               errorMessage.innerHTML = 'Error fetching random meal. Please try again later.';
@@ -151,15 +154,36 @@
             });
   });
 
-  // Get the ingredients list for a meal
+  // Generate ingredients list
   function getIngredientsList(meal) {
     const ingredients = [];
     for (let i = 1; i <= 20; i++) {
-      if (meal[`strIngredient${i}`] && meal[`strIngredient${i}`] !== "") {
-        ingredients.push(`<li>${meal[`strIngredient${i}`]} - ${meal[`strMeasure${i}`]}</li>`);
+      const ingredient = meal[`strIngredient${i}`];
+      const measure = meal[`strMeasure${i}`];
+      if (ingredient && ingredient.trim() !== "") {
+        ingredients.push(`<li>${ingredient} - ${measure}</li>`);
       }
     }
     return ingredients.join('');
+  }
+
+  // Add meal to favorites
+  function addToFavorites(mealId) {
+    fetch(`https://www.themealdb.com/api/json/v1/1/lookup.php?i=${mealId}`)
+            .then(res => res.json())
+            .then(data => {
+              const meal = data.meals[0];
+              let favorites = JSON.parse(localStorage.getItem('favorites')) || [];
+              const exists = favorites.some(fav => fav.idMeal === meal.idMeal);
+
+              if (!exists) {
+                favorites.push(meal);
+                localStorage.setItem('favorites', JSON.stringify(favorites));
+                alert('❤️ Recipe added to favorites!');
+              } else {
+                alert('✅ This recipe is already in your favorites!');
+              }
+            });
   }
 </script>
 
