--- a/meals.html
+++ b/meals.html
@@ -2,86 +2,241 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Meal App - Home</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Explore Recipes</title>
   <style>
-    body {
-      font-family: 'Segoe UI', sans-serif;
-      background-color: #fdf6e3;
-      background-image: url('https://www.transparenttextures.com/patterns/wood-pattern.png');
+    * {
+      box-sizing: border-box;
       margin: 0;
       padding: 0;
+      font-family: 'Segoe UI', sans-serif;
+    }
+
+    body {
+      background-color: #f9f9f9;
     }
 
     header {
-      background-color: #c0392b;
-      color: white;
-      text-align: center;
-      padding: 30px 0;
-      box-shadow: 0 2px 10px rgba(0,0,0,0.2);
+      background-color: #fff;
+      padding: 20px;
+      box-shadow: 0 2px 10px rgba(0,0,0,0.1);
+      position: sticky;
+      top: 0;
+      z-index: 999;
     }
 
-    .container {
-      max-width: 800px;
-      margin: 40px auto;
-      padding: 30px;
-      background-color: #fff5e1;
-      border-radius: 16px;
-      box-shadow: 0 0 20px rgba(0,0,0,0.1);
+    .nav-container {
+      max-width: 1200px;
+      margin: auto;
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+      flex-wrap: wrap;
     }
 
-    h2 {
-      text-align: center;
-      color: #6e3b1e;
-      margin-bottom: 30px;
+    .nav-container h1 {
+      font-size: 22px;
+      color: #c0392b;
     }
 
-    ul {
+    nav ul {
       list-style: none;
-      padding: 0;
+      display: flex;
+      flex-wrap: wrap;
+      gap: 10px;
+      padding-left: 0;
     }
 
-    li {
-      margin: 15px 0;
-    }
-
-    a {
-      display: block;
-      text-align: center;
-      background-color: #e67e22;
-      color: white;
+    nav ul li a {
       text-decoration: none;
-      padding: 15px;
-      border-radius: 10px;
-      font-size: 18px;
+      color: #333;
+      padding: 8px 12px;
+      border-radius: 6px;
       transition: background-color 0.3s;
     }
 
-    a:hover {
-      background-color: #cf711d;
+    nav ul li a:hover {
+      background-color: #f0f0f0;
+    }
+
+    .search-bar {
+      margin-top: 10px;
+      display: flex;
+      justify-content: center;
+    }
+
+    .search-bar input {
+      padding: 10px;
+      width: 300px;
+      border-radius: 20px;
+      border: 1px solid #ccc;
+      outline: none;
+    }
+
+    .main-title {
+      text-align: center;
+      margin: 40px 0 20px;
+      font-size: 32px;
+      color: #333;
+      font-weight: bold;
+    }
+
+    .container {
+      max-width: 1200px;
+      margin: auto;
+      display: grid;
+      grid-template-columns: 3fr 1fr;
+      gap: 30px;
+      padding: 0 20px 60px;
+    }
+
+    .recipes {
+      display: grid;
+      grid-template-columns: repeat(auto-fit, minmax(220px, 1fr));
+      gap: 20px;
+    }
+
+    .card {
+      background: #fff;
+      border-radius: 16px;
+      overflow: hidden;
+      box-shadow: 0 2px 12px rgba(0,0,0,0.05);
+      transition: transform 0.2s ease;
+    }
+
+    .card:hover {
+      transform: translateY(-4px);
+    }
+
+    .card img {
+      width: 100%;
+      height: 140px;
+      object-fit: cover;
+    }
+
+    .card .content {
+      padding: 15px;
+    }
+
+    .card .content h4 {
+      font-size: 16px;
+      margin-bottom: 5px;
+      color: #333;
+    }
+
+    .sidebar {
+      background: #fff;
+      padding: 20px;
+      border-radius: 16px;
+      box-shadow: 0 2px 12px rgba(0,0,0,0.05);
+    }
+
+    .sidebar h3 {
+      margin-bottom: 15px;
+      font-size: 18px;
+      color: #333;
+    }
+
+    .sidebar ul {
+      list-style: none;
+      padding-left: 0;
+    }
+
+    .sidebar ul li {
+      margin-bottom: 10px;
+      font-size: 14px;
+      color: #555;
+    }
+
+    @media (max-width: 900px) {
+      .container {
+        grid-template-columns: 1fr;
+      }
+
+      nav ul {
+        flex-direction: column;
+        align-items: flex-start;
+      }
     }
   </style>
 </head>
 <body>
-
   <header>
-    <h1>🍽️ Welcome to the Meal Explorer</h1>
+    <div class="nav-container">
+      <h1>🍽️ Meal Explorer</h1>
+      <nav>
+        <ul>
+          <li><a href="search-by-letter.html">🔤 Search by First Letter</a></li>
+          <li><a href="random-meal.html">🎲 Random Meal</a></li>
+          <li><a href="all-categories.html">📂 All Categories</a></li>
+          <li><a href="meals-by-category.html">🍛 By Category</a></li>
+          <li><a href="meals-by-area.html">🌍 By Area</a></li>
+          <li><a href="meals-by-ingredient.html">🥕 By Ingredient</a></li>
+          <li><a href="ShowMyRecipes.html">📋 Show My Recipes</a></li>
+          <li><a href="favorites.html">❤️ Favorites</a></li>
+        </ul>
+      </nav>
+    </div>
+    <div class="search-bar">
+     <input type="text" id="searchInput" placeholder="Search for a meal...">
+    </div>
+    
   </header>
 
-  <div class="container">
-    <h2>Choose an Option</h2>
-    <ul>
-      <li><a href="search-by-name.html">🔎 Search by Name</a></li>
-      <li><a href="search-by-letter.html">🔤 Search by First Letter</a></li>
-      <li><a href="random-meal.html">🎲 Random Meal</a></li>
-      <li><a href="all-categories.html">📂 All Categories</a></li>
-      <li><a href="meals-by-category.html">🍛 By Category</a></li>
-      <li><a href="meals-by-area.html">🌍 By Area</a></li>
-      <li><a href="meals-by-ingredient.html">🥕 By Ingredient</a></li>
-      <li><a href="ShowMyRecipes.html"> 📋 Show My Recipes</a></li>
-      <li> <a href="favorites.html">❤️ Favorites</a></li>
+  <div class="main-title">Explore Recipes</div>
 
-    </ul>
+  <div class="container">
+    <div class="recipes" id="recipeContainer">
+      <!-- Recipes will be inserted here -->
+    </div>
+
+    <div class="sidebar">
+      <h3>Most Followed</h3>
+      <ul>
+        <li>Madaleena <span>(Italy)</span></li>
+        <li>Suzi Perry <span>(UK)</span></li>
+        <li>Ally <span>(USA)</span></li>
+        <li>Matteo Alessani <span>(France)</span></li>
+      </ul>
+    </div>
   </div>
 
+  <script>
+    const recipeContainer = document.getElementById('recipeContainer');
+    const searchInput = document.getElementById('searchInput');
+
+    async function fetchMeals(query = '') {
+      const res = await fetch(`https://www.themealdb.com/api/json/v1/1/search.php?s=${query}`);
+      const data = await res.json();
+      renderMeals(data.meals);
+    }
+
+    function renderMeals(meals) {
+      recipeContainer.innerHTML = '';
+      if (!meals) {
+        recipeContainer.innerHTML = '<p>No meals found.</p>';
+        return;
+      }
+      meals.forEach(meal => {
+        const card = document.createElement('div');
+        card.classList.add('card');
+        card.innerHTML = `
+          <img src="${meal.strMealThumb}" alt="${meal.strMeal}">
+          <div class="content">
+            <h4>${meal.strMeal}</h4>
+            <p>${meal.strCategory}</p>
+          </div>
+        `;
+        recipeContainer.appendChild(card);
+      });
+    }
+
+    searchInput.addEventListener('input', (e) => {
+      fetchMeals(e.target.value);
+    });
+
+    // Load initial meals
+    fetchMeals();
+  </script>
 </body>
 </html>
