--- a/ShowMyRecipes.html
+++ b/ShowMyRecipes.html
@@ -1,64 +1,113 @@
+  
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <title>Show My Recipes</title>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <title>Show My Recipes 🍽️</title>
   <style>
+    * {
+      box-sizing: border-box;
+      margin: 0;
+      padding: 0;
+      font-family: 'Segoe UI', sans-serif;
+    }
+
     body {
-      font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-      background-color: #fff8f5;
-      padding: 20px;
+      background-color: #f9f9f9;
       color: #333;
     }
 
-    .container {
-      max-width: 900px;
+    header {
+      background-color: #fff;
+      padding: 20px;
+      box-shadow: 0 2px 10px rgba(0,0,0,0.1);
+      position: sticky;
+      top: 0;
+      z-index: 999;
+    }
+
+    .nav-container {
+      max-width: 1200px;
       margin: auto;
-      background: #fff;
-      padding: 30px;
-      border-radius: 10px;
-      box-shadow: 0 8px 20px rgba(0, 0, 0, 0.15);
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+      flex-wrap: wrap;
     }
 
-    h1 {
-      text-align: center;
-      color: #e65100;
+    .nav-container h1 {
+      font-size: 22px;
+      color: #c0392b;
     }
 
-    .back-link {
-      display: inline-block;
-      margin-bottom: 20px;
+    nav ul {
+      list-style: none;
+      display: flex;
+      flex-wrap: wrap;
+      gap: 10px;
+      padding-left: 0;
+    }
+
+    nav ul li a {
       text-decoration: none;
-      font-size: 16px;
-      color: #e65100;
+      color: #333;
+      padding: 8px 12px;
+      border-radius: 6px;
+      transition: background-color 0.3s;
+    }
+
+    nav ul li a:hover {
+      background-color: #f0f0f0;
+    }
+
+    .main-title {
+      text-align: center;
+      margin: 40px 0 20px;
+      font-size: 32px;
+      color:  #c0392b;
       font-weight: bold;
     }
 
-    .back-link:hover {
-      text-decoration: underline;
+    .container {
+      max-width: 1000px;
+      margin: auto;
+      background: #fff;
+      padding: 30px;
+      border-radius: 16px;
+      box-shadow: 0 2px 12px rgba(0,0,0,0.05);
     }
 
-    input, textarea, select {
+    .section-title {
+      margin-top: 30px;
+      font-size: 20px;
+      border-bottom: 2px solid #c0392b;
+      padding-bottom: 5px;
+      color:  #333;
+    }
+
+    form input, form textarea {
       width: 100%;
       padding: 10px;
-      margin: 8px 0;
+      margin: 10px 0;
       border: 1px solid #ccc;
-      border-radius: 5px;
+      border-radius: 10px;
+      outline: none;
     }
 
     button {
       padding: 10px 15px;
       margin: 5px 5px 5px 0;
       border: none;
-      border-radius: 5px;
+      border-radius: 8px;
       cursor: pointer;
       color: white;
     }
 
-    .btn-add { background-color: #e53935; }
-    .btn-edit { background-color: #fb8c00; }
-    .btn-delete { background-color: #b71c1c; }
-    .btn-import { background-color: #43a047; }
+    .btn-add { background-color: #c0392b; }
+    .btn-edit { background-color: #f39c12; }
+    .btn-delete { background-color: #e74c3c; }
+    .btn-import { background-color: #27ae60; }
 
     table {
       width: 100%;
@@ -67,30 +116,59 @@
     }
 
     th, td {
-      border: 1px solid #ddd;
+      border: 1px solid #eee;
       padding: 12px;
       text-align: center;
     }
 
     th {
-      background-color: #ff7043;
+      background-color: #c0392b;
       color: white;
     }
 
-    .section-title {
-      margin-top: 30px;
-      font-size: 20px;
-      border-bottom: 2px solid #e65100;
-      padding-bottom: 5px;
+    .back-link {
+      display: inline-block;
+      margin-bottom: 20px;
+      text-decoration: none;
+      font-size: 16px;
+      color: #c0392b;
+      font-weight: bold;
+    }
+
+    .back-link:hover {
+      text-decoration: underline;
+    }
+
+    @media (max-width: 600px) {
+      .nav-container, nav ul {
+        flex-direction: column;
+        align-items: flex-start;
+      }
     }
   </style>
 </head>
 <body>
+  <header>
+    <div class="nav-container">
+      <h1>🍽️ Meal Explorer</h1>
+      <nav>
+        <ul>
+          <li><a href="meals.html">🏠 Home</a></li>
+          <li><a href="search-by-letter.html">🔤 Search by First Letter</a></li>
+          <li><a href="random-meal.html">🎲 Random Meal</a></li>
+          <li><a href="all-categories.html">📂 All Categories</a></li>
+          <li><a href="meals-by-category.html">🍛 By Category</a></li>
+          <li><a href="meals-by-area.html">🌍 By Area</a></li>
+          <li><a href="meals-by-ingredient.html">🥕 By Ingredient</a></li>
+          <li><a href="favorites.html">❤️ Favorites</a></li>
+        </ul>
+      </nav>
+    </div>
+  </header>
+
+  <div class="main-title">Show My Recipes 🍽️</div>
 
   <div class="container">
-    <a href="meals.html" class="back-link">🏠 Back to Home</a>
-    <h1>Show My Recipes 🍽️</h1>
-
     <div class="section-title">➕ Add / Edit Recipe</div>
     <form id="recipeForm" onsubmit="handleFormSubmit(event)">
       <input type="hidden" id="recipeId">
@@ -99,10 +177,10 @@
       <input type="text" id="area" placeholder="Area" required />
       <textarea id="instructions" placeholder="Instructions" rows="4" required></textarea>
       <button class="btn-add" type="submit">Save Recipe</button>
-      <button type="button" class="btn-import" onclick="importFromAPI()">Show from TheMealDB</button>
+      <button type="button" class="btn-import" onclick="importFromAPI()">Import from TheMealDB</button>
     </form>
 
-    <div class="section-title">📋 My Recipes</div>
+    <div class="section-title">📋 My Recipes </div>
     <table>
       <thead>
         <tr>
@@ -135,13 +213,11 @@
       if (!name || !category || !area || !instructions) return;
 
       if (id) {
-        // PUT - Update
         const index = recipes.findIndex(r => r.id === id);
         if (index !== -1) {
           recipes[index] = { id, name, category, area, instructions };
         }
       } else {
-        // POST - Add
         const newRecipe = {
           id: Date.now().toString(),
           name,
@@ -162,13 +238,13 @@
       const tbody = document.getElementById('recipeTableBody');
       tbody.innerHTML = '';
       if (recipes.length === 0) {
-        tbody.innerHTML = `<tr><td colspan="5">No recipes yet.</td></tr>`;
+        tbody.innerHTML = <tr><td colspan="5">No recipes yet.</td></tr>;
         return;
       }
 
       recipes.forEach(recipe => {
         const row = document.createElement('tr');
-        row.innerHTML = `
+        row.innerHTML = 
           <td>${recipe.name}</td>
           <td>${recipe.category}</td>
           <td>${recipe.area}</td>
@@ -177,7 +253,7 @@
             <button class="btn-edit" onclick="editRecipe('${recipe.id}')">Edit</button>
             <button class="btn-delete" onclick="deleteRecipe('${recipe.id}')">Delete</button>
           </td>
-        `;
+        ;
         tbody.appendChild(row);
       });
     }
@@ -200,10 +276,10 @@
     }
 
     function importFromAPI() {
-      const mealName = prompt("Enter a meal name to import from TheMealDB:");
+      const mealName = prompt("Enter a meal name to import:");
       if (!mealName) return;
 
-      fetch(`https://www.themealdb.com/api/json/v1/1/search.php?s=${mealName}`)
+      fetch(https://www.themealdb.com/api/json/v1/1/search.php?s=${mealName})
         .then(res => res.json())
         .then(data => {
           if (!data.meals) return alert("Meal not found!");
@@ -220,3 +296,4 @@
   </script>
 </body>
 </html>
+
