--- a/all-categories.html
+++ b/all-categories.html
@@ -1,251 +1,186 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <title>All Categories</title>
-  <style>
-    body {
-      font-family: 'Segoe UI', sans-serif;
-      background-color: #fdf6e3;
-      background-image: url('https://www.transparenttextures.com/patterns/wood-pattern.png');
-      margin: 0;
-      padding: 0;
-    }
+body {
+  font-family: 'Segoe UI', sans-serif;
+  background-color: #fdf6e3;
+  background-image: url('https://www.transparenttextures.com/patterns/wood-pattern.png');
+  margin: 0;
+  padding: 0;
+}
 
-    header {
-      background-color: #c0392b;
-      color: white;
-      text-align: center;
-      padding: 30px 0;
-      box-shadow: 0 2px 10px rgba(0,0,0,0.2);
-    }
-    .container {
-      max-width: 900px;
-      margin: 40px auto;
-      padding: 30px;
-      background-color: #fff5e1;
-      border-radius: 16px;
-      box-shadow: 0 0 20px rgba(0,0,0,0.1);
-    }
+/* Header */
+header {
+  background-color: #fff;
+  padding: 20px;
+  box-shadow: 0 2px 10px rgba(0,0,0,0.1);
+  position: sticky;
+  top: 0;
+  z-index: 999;
+}
 
-    h2 {
-      text-align: center;
-      color: #6e3b1e;
-      margin-bottom: 20px;
-    }
+/* Navigation */
+.nav-container h1 {
+  color: red;
+}
 
-    .category-list {
-      list-style-type: none;
-      padding: 0;
-      margin: 0;
-    }
+nav ul {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  gap: 10px;
+  list-style: none;
+  padding: 0;
+  margin-top: 15px;
+}
 
-    .category-item {
-      background-color: #e67e22;
-      color: white;
-      margin: 10px 0;
-      padding: 12px;
-      border-radius: 8px;
-      text-align: center;
-      cursor: pointer;
-    }
+nav ul li a {
+  display: flex;
+  align-items: center;
+  gap: 5px;
+  text-decoration: none;
+  font-size: 14px;
+  color: #6e3b1e;
+  background-color: #fff5e1;
+  border: 1px solid #e67e22;
+  padding: 6px 10px;
+  border-radius: 8px;
+  transition: 0.3s ease;
+}
 
-    .category-item:hover {
-      background-color: #d35400;
-    }
+nav ul li a:hover {
+  background-color: #e67e22;
+  color: white;
+}
 
-    .meal-details {
-      margin: 40px 0 30px;
-      padding: 20px;
-      background-color: #fff;
-      border-radius: 16px;
-      box-shadow: 0 0 15px rgba(0,0,0,0.1);
-    }
+nav ul li a .icon {
+  font-size: 16px;
+}
 
-    .meal-details img {
-      max-width: 100%;
-      border-radius: 12px;
-    }
+/* Container */
+.container {
+  max-width: 900px;
+  margin: 40px auto;
+  padding: 30px;
+  background-color: #fff5e1;
+  border-radius: 16px;
+  box-shadow: 0 0 20px rgba(0,0,0,0.1);
+}
 
-    .meals-list {
-      display: grid;
-      grid-template-columns: repeat(auto-fit, minmax(220px, 1fr));
-      gap: 20px;
-    }
+/* Headings */
+h2 {
+  text-align: center;
+  color: #6e3b1e;
+  margin-bottom: 20px;
+}
 
-    .meal-item {
-      background-color: #fff;
-      padding: 10px;
-      border-radius: 8px;
-      box-shadow: 0 2px 10px rgba(0,0,0,0.1);
-      text-align: center;
-    }
+/* Categories */
+.category-list {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  gap: 10px;
+  padding: 0;
+  margin: 0 auto;
+  list-style-type: none;
+}
 
-    .meal-item img {
-      width: 100%;
-      border-radius: 8px;
-    }
+.category-item {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  gap: 6px;
+  background-color: #e67e22;
+  color: white;
+  margin: 6px;
+  padding: 8px 10px;
+  border-radius: 6px;
+  text-align: center;
+  cursor: pointer;
+  font-size: 13px;
+  width: fit-content;
+  min-width: 100px;
+  transition: background-color 0.3s ease;
+}
 
-    .meal-item button {
-      margin-top: 10px;
-      background-color: #c0392b;
-      color: white;
-      border: none;
-      padding: 8px 12px;
-      border-radius: 6px;
-      cursor: pointer;
-    }
+.category-item:hover {
+  background-color: #d35400;
+}
 
-    .meal-item button:hover {
-      background-color: #a93226;
-    }
+.category-item .icon {
+  font-size: 14px;
+}
 
-    .favorites-btn {
-      margin-top: 10px;
-      background-color: #f39c12;
-      color: white;
-      border: none;
-      padding: 8px 12px;
-      border-radius: 6px;
-      cursor: pointer;
-    }
+/* Meal List */
+.meals-list {
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(220px, 1fr));
+  gap: 20px;
+}
 
-    .favorites-btn:hover {
-      background-color: #e67e22;
-    }
+.meal-item {
+  background-color: #fff;
+  padding: 10px;
+  border-radius: 8px;
+  box-shadow: 0 2px 10px rgba(0,0,0,0.1);
+  text-align: center;
+}
 
-    .back-link {
-      display: block;
-      margin-top: 30px;
-      text-align: center;
-      font-size: 16px;
-      color: #8e5b3f;
-      text-decoration: none;
-    }
+.meal-item img {
+  width: 100%;
+  border-radius: 8px;
+}
 
-    .back-link:hover {
-      text-decoration: underline;
-    }
-  </style>
-</head>
-<body>
+.meal-item button {
+  margin-top: 10px;
+  background-color: #c0392b;
+  color: white;
+  border: none;
+  padding: 8px 12px;
+  border-radius: 6px;
+  cursor: pointer;
+}
 
-<header>
-  <h1>📂 All Meal Categories</h1>
-</header>
+.meal-item button:hover {
+  background-color: #a93226;
+}
 
-<div class="container">
-  <h2>Meal Categories</h2>
-  <ul id="category-list" class="category-list"></ul>
+/* Favorites Button */
+.favorites-btn {
+  margin-top: 10px;
+  background-color: #f39c12;
+  color: white;
+  border: none;
+  padding: 8px 12px;
+  border-radius: 6px;
+  cursor: pointer;
+}
 
-  <div id="meal-details" class="meal-details"></div>
+.favorites-btn:hover {
+  background-color: #e67e22;
+}
 
-  <div id="meals-list" class="meals-list"></div>
+/* Meal Details */
+.meal-details {
+  margin: 40px 0 30px;
+  padding: 20px;
+  background-color: #fff;
+  border-radius: 16px;
+  box-shadow: 0 0 15px rgba(0,0,0,0.1);
+}
 
-  <a href="meals.html" class="back-link">🏠 Back to Home</a>
-</div>
+.meal-details img {
+  max-width: 100%;
+  border-radius: 12px;
+}
 
-<script>
-  const categoryList = document.getElementById('category-list');
-  const mealsList = document.getElementById('meals-list');
-  const mealDetails = document.getElementById('meal-details');
+/* Back Link */
+.back-link {
+  display: block;
+  margin-top: 30px;
+  text-align: center;
+  font-size: 16px;
+  color: #8e5b3f;
+  text-decoration: none;
+}
 
-  // Get all categories
-  fetch('https://www.themealdb.com/api/json/v1/1/list.php?c=list')
-          .then(res => res.json())
-          .then(data => {
-            data.meals.forEach(category => {
-              const li = document.createElement('li');
-              li.classList.add('category-item');
-              li.textContent = category.strCategory;
-              li.addEventListener('click', () => {
-                fetchMealsByCategory(category.strCategory);
-              });
-              categoryList.appendChild(li);
-            });
-          });
-
-  // Get meals by category
-  function fetchMealsByCategory(category) {
-    mealsList.innerHTML = '';
-    mealDetails.innerHTML = ''; // Clear any previous recipe
-    fetch(`https://www.themealdb.com/api/json/v1/1/filter.php?c=${category}`)
-            .then(res => res.json())
-            .then(data => {
-              data.meals.forEach(meal => {
-                const mealDiv = document.createElement('div');
-                mealDiv.classList.add('meal-item');
-                mealDiv.innerHTML = `
-            <img src="${meal.strMealThumb}" alt="${meal.strMeal}">
-            <h3>${meal.strMeal}</h3>
-            <button data-id="${meal.idMeal}">View Recipe</button>
-          `;
-                mealsList.appendChild(mealDiv);
-              });
-
-              document.querySelectorAll('.meal-item button').forEach(btn => {
-                btn.addEventListener('click', () => {
-                  const mealId = btn.getAttribute('data-id');
-                  fetchRecipe(mealId);
-                });
-              });
-            });
-  }
-
-  // Get recipe by ID
-  function fetchRecipe(id) {
-    mealDetails.innerHTML = '';
-    fetch(`https://www.themealdb.com/api/json/v1/1/lookup.php?i=${id}`)
-            .then(res => res.json())
-            .then(data => {
-              const meal = data.meals[0];
-              const ingredients = getIngredientsList(meal);
-              mealDetails.innerHTML = `
-          <h2>${meal.strMeal}</h2>
-          <img src="${meal.strMealThumb}" alt="${meal.strMeal}">
-          <p><strong>Category:</strong> ${meal.strCategory}</p>
-          <p><strong>Area:</strong> ${meal.strArea}</p>
-          <p><strong>Instructions:</strong> ${meal.strInstructions}</p>
-          <h3>Ingredients:</h3>
-          <ul>${ingredients}</ul>
-          <button class="favorites-btn" data-id="${meal.idMeal}">❤️ Add to Favorites</button>
-        `;
-              mealDetails.scrollIntoView({ behavior: 'smooth' });
-
-              // Add event listener to favorite button
-              const favoritesBtn = mealDetails.querySelector('.favorites-btn');
-              favoritesBtn.addEventListener('click', () => {
-                addToFavorites(meal);
-              });
-            });
-  }
-
-  function getIngredientsList(meal) {
-    const ingredients = [];
-    for (let i = 1; i <= 20; i++) {
-      const ingredient = meal[`strIngredient${i}`];
-      const measure = meal[`strMeasure${i}`];
-      if (ingredient && ingredient.trim()) {
-        ingredients.push(`<li>${ingredient} - ${measure}</li>`);
-      }
-    }
-    return ingredients.join('');
-  }
-
-  // Add to favorites
-  function addToFavorites(meal) {
-    let favorites = JSON.parse(localStorage.getItem('favorites')) || [];
-    const mealExists = favorites.some(fav => fav.idMeal === meal.idMeal);
-
-    if (!mealExists) {
-      favorites.push(meal);
-      localStorage.setItem('favorites', JSON.stringify(favorites));
-      alert('Recipe added to favorites!');
-    } else {
-      alert('This recipe is already in your favorites!');
-    }
-  }
-</script>
-
-</body>
-</html>
+.back-link:hover {
+  text-decoration: underline;
+}
